# simple-smt-ocaml

./: Makefile  Readme.md  dune-project
docs/: index.html
docs/simple_smt/: index.html
docs/simple_smt/Simple_smt/: index.html
lib/: dune  simple_smt.ml
