(lang dune 3.12)

(name simple_smt)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Iavor S. Diatchki")

(maintainers "Iavor S. Diatchki")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name simple_smt)
 (synopsis "A library for interacting with an SMT solver process.")
 (description "A library for interacting with an SMT solver process.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

